[gd_scene load_steps=11 format=3 uid="uid://bka00kwm83sv3"]

[ext_resource type="Script" uid="uid://dry28hs6v2cxv" path="res://Game/game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://c2r1oiupv6epm" path="res://Audio/audio_manager.tscn" id="2_fwxkx"]
[ext_resource type="Script" uid="uid://rppbyrb3gjyg" path="res://Tower/tower_stats.gd" id="2_kul4i"]
[ext_resource type="Resource" uid="uid://dlfj4lfms0w6c" path="res://Tower/TowerVariations/basic_tower.tres" id="3_7gi1t"]
[ext_resource type="Resource" uid="uid://du2ei4wrolyd7" path="res://Tower/TowerVariations/spiffy_tower.tres" id="4_fsxsm"]
[ext_resource type="PackedScene" uid="uid://dwc1hnjb0rhp5" path="res://UI/in_game_ui.tscn" id="5_7jktm"]
[ext_resource type="Resource" uid="uid://bw8ckc10op0ct" path="res://Tower/TowerVariations/fireball_tower.tres" id="5_glinl"]
[ext_resource type="PackedScene" uid="uid://cbtvvr8oh0yq7" path="res://Levels/Levels/level_01.tscn" id="6_kul4i"]
[ext_resource type="PackedScene" uid="uid://bsfbgtbux1gi7" path="res://Levels/Levels/level_02.tscn" id="7_kul4i"]

[sub_resource type="LabelSettings" id="LabelSettings_fc0e3"]
font_size = 80

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")
tower_stats = Array[ExtResource("2_kul4i")]([ExtResource("3_7gi1t"), ExtResource("4_fsxsm"), ExtResource("5_glinl")])
levels = Array[PackedScene]([ExtResource("6_kul4i"), ExtResource("7_kul4i")])

[node name="AudioManager" parent="." instance=ExtResource("2_fwxkx")]

[node name="InGameUI" parent="." instance=ExtResource("5_7jktm")]
unique_name_in_owner = true
z_index = 100
offset_left = -59.0
offset_top = -47.0
offset_right = 1221.0
offset_bottom = 679.0
mouse_filter = 2

[node name="GameOverScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 999
offset_left = -16.0
offset_top = -16.0
offset_right = 1171.0
offset_bottom = 668.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="GameOverText" type="Label" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_fc0e3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(582, 314)
zoom = Vector2(1.5, 1.5)
