[gd_scene load_steps=4 format=3 uid="uid://bka00kwm83sv3"]

[ext_resource type="Script" uid="uid://dry28hs6v2cxv" path="res://game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://dxmbscpv7glme" path="res://monster_trail.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://eou4mq5n6oh3" path="res://tower.tscn" id="3_feb5d"]

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")
seconds_per_monster = 4.0

[node name="BackgroundGrass" type="ColorRect" parent="."]
offset_left = -11.0
offset_top = -10.0
offset_right = 1160.0
offset_bottom = 657.0
color = Color(4.548356e-06, 0.36466426, 0.101144485, 1)

[node name="MonsterTrail" parent="." instance=ExtResource("2_e2o6t")]
unique_name_in_owner = true

[node name="Tower" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(344, 295)

[node name="Tower2" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(975, 168)
